<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/simple_exo_player"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <ImageView
        android:id="@+id/error_loading_image_view"
        android:src="@drawable/ic_round_error_symbol"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:layout_height="200dp" />

    <LinearLayout
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/step_description_text_view"
            tools:text="Prep the cookie crust."
            style="@style/DefaultTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View style="@style/DefaultDividerStyle" />

        <TextView
            android:text="@string/title_step_instructions"
            style="@style/DefaultTextStyle"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/step_instruction_text_view"
            style="@style/DefaultTextStyle"
            android:textSize="16dp"
            tools:text="2. Whisk the graham cracker crumbs, 50 grams (1/4 cup) of sugar, and 1/2 teaspoon of salt together in a medium bowl. Pour the melted butter and 1 teaspoon of vanilla into the dry ingredients and stir together until evenly mixed."
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <FrameLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/button_previous"
            android:layout_gravity="left|bottom"
            android:id="@+id/previous_button"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/button_next"
            android:layout_gravity="right|bottom"
            android:id="@+id/next_button"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>

</LinearLayout>